[gd_scene load_steps=12 format=3 uid="uid://gkjsdqs815fl"]

[ext_resource type="Script" path="res://scenes/ui/player_state/player_state.gd" id="1_1uj4t"]
[ext_resource type="PackedScene" uid="uid://blggg6gw6laco" path="res://scenes/ui/player_state/gift_box.tscn" id="2_y3715"]
[ext_resource type="Texture2D" uid="uid://bogo67r4r3i78" path="res://assets/textures/character/player/ninja_frog/ninja_frog_idle_32x32.png" id="3_m2mm4"]
[ext_resource type="Texture2D" uid="uid://cfqxjgatk1jmu" path="res://assets/textures/icons/arrow_button.png" id="3_ypfxi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgjd7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oty2l"]
bg_color = Color(0.360784, 0.384314, 0.396078, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56bkv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mgq8a"]
atlas = ExtResource("3_m2mm4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Animation" id="Animation_qm3pq"]
resource_name = "ExpBarGradualColor"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/ExpBar:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.384314, 0.396078, 1), Color(0.360784, 1, 0.396078, 1), Color(0.360784, 0.384314, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vf3w5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/ExpBar:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.360784, 0.384314, 0.396078, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tlyj"]
_data = {
"ExpBarGradualColor": SubResource("Animation_qm3pq"),
"RESET": SubResource("Animation_vf3w5")
}

[node name="PlayerState" type="CanvasLayer"]
script = ExtResource("1_1uj4t")

[node name="Main" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExpBar" type="ProgressBar" parent="Main"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bgjd7")
theme_override_styles/fill = SubResource("StyleBoxFlat_oty2l")
value = 50.0
show_percentage = false

[node name="CurrentLevel" type="Label" parent="Main/ExpBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Level: 0"
horizontal_alignment = 1

[node name="Body" type="HBoxContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="Main/Body"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_56bkv")

[node name="AbilityBox" parent="Main/Body" instance=ExtResource("2_y3715")]
layout_mode = 2

[node name="TalkButton" type="Button" parent="Main/Body"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
icon = SubResource("AtlasTexture_mgq8a")
expand_icon = true

[node name="Witticism" type="Label" parent="Main/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="Main/Body"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("3_ypfxi")

[node name="WeaponBox" parent="Main/Body" instance=ExtResource("2_y3715")]
layout_mode = 2
direction = 1

[node name="VSeparator" type="VSeparator" parent="Main/Body"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_56bkv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6tlyj")
}
